correct debug highlight with ifblock